rds.tf
resource "aws_db_subnet_group" "main" {

  name = "${var.project_name}-db-subnet-group"


  subnet_ids = [
    aws_subnet.private.id,
    aws_subnet.private_c.id
  ]


  tags = {

    Name = "${var.project_name}-db-subnet-group"

  }

}



resource "aws_db_instance" "main" {

  identifier = "${var.project_name}-mysql"


  engine = "mysql"

  engine_version = "8.4.9"

  allow_major_version_upgrade = true
  apply_immediately = true

  instance_class = "db.t3.micro"


  allocated_storage = 20


  username = var.db_username

  password = var.db_password


  db_subnet_group_name = aws_db_subnet_group.main.name


  vpc_security_group_ids = [
    aws_security_group.rds.id
  ]


  publicly_accessible = false


  skip_final_snapshot = true


  backup_retention_period = 7


  tags = {

    Name = "${var.project_name}-rds"

  }

}
