route_table.tf
resource "aws_route_table" "public" {

  vpc_id = aws_vpc.main.id


  route {

    cidr_block = "0.0.0.0/0"

    gateway_id = aws_internet_gateway.main.id

  }


  tags = {

    Name = "${var.project_name}-public-route-table"

  }

}


resource "aws_route_table_association" "public" {

  subnet_id = aws_subnet.public.id

  route_table_id = aws_route_table.public.id

}

resource "aws_route_table_association" "public_c" {

  subnet_id = aws_subnet.public_c.id

  route_table_id = aws_route_table.public.id

}
